// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContextMenu tests shows when event with correct "id" is triggered 1`] = `
<body>
  <div>
    <nav
      class="react-contextmenu"
      role="menu"
      style="position: fixed; opacity: 0; pointer-events: none;"
      tabindex="-1"
    />
  </div>
</body>
`;

exports[`ContextMenu tests shows when event with correct "id" is triggered 2`] = `
<body>
  <div>
    <nav
      class="react-contextmenu react-contextmenu--visible"
      role="menu"
      style="position: fixed; opacity: 1; pointer-events: auto; top: 50px; left: 50px;"
      tabindex="-1"
    />
  </div>
</body>
`;
